samples/_failures_safe/1760961753_7281be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13730f98.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_13730f98.c:157:9: error: expected expression at end of input
  157 |         printf("Token %zu: %s -> '%s'\n",
      |         ^~~~~~
./samples/SAFE/__tmp_13730f98.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13730f98.c:157:9: error: expected declaration or statement at end of input
